Fix monitor alignment.

--- a/css/MultiSelect.css
+++ b/css/MultiSelect.css
@@ -12,6 +12,7 @@
 	padding: 0 0 0 4px;
 	margin: 0;
 	overflow: hidden;
+    text-align: left;
 }
 .MultiSelect.mac .monitor {
 	background: url("img/mac/monitor-left.png") top left no-repeat;
